--- a/index.less
+++ b/index.less
@@ -1,6 +1,27 @@
 @charset "UTF-8";
 
+html
+{
+    height: 100%;
+}
+
 body
 {
     margin: 0;
+    height: 100%;
+}
+
+.iga-root
+{
+    height: 100%;
+
+    .viewer-hold
+    {
+        height: 100%;
+
+        ul
+        {
+            display: none;
+        }
+    }
 }
