--- a/index.less
+++ b/index.less
@@ -15,11 +15,16 @@ body
 {
     height: 100%;
 
-    .viewer-hold
+    .the-viewer
     {
         height: 100%;
 
         ul
+        {
+            display: none;
+        }
+
+        .viewer-button
         {
             display: none;
         }
