correctly saving image positioning viewer options page styling

--- a/index.less
+++ b/index.less
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+@dark-back: #141518;
+
 html
 {
     height: 100%;
@@ -9,6 +11,7 @@ body
 {
     margin: 0;
     height: 100%;
+    background-color: @dark-back;
 }
 
 .iga-root
@@ -20,11 +23,6 @@ body
         height: 100%;
 
         ul
-        {
-            display: none;
-        }
-
-        .viewer-button
         {
             display: none;
         }
