selected thumbnail design

--- a/js/previewpanel/previewpanel.less
+++ b/js/previewpanel/previewpanel.less
@@ -1,19 +1,62 @@
+@fade-background: rgba(31, 31, 31, 0.4);
+@iga-salmon: #ea4f5f;
+@imgur-green: #1bb76e;
+
 .preview-panel
 {
     position: absolute;
     display: flex;
+    height: 100%;
     top: 0;
     left: 0;
     z-index: 2018;
-    flex-wrap: wrap;
     font-size: 0;
     padding: 20px;
-    background-color: rgba(31, 31, 31, 0.4);
+    flex-wrap: wrap;
+    align-content: flex-start;
+    background-color: @fade-background;
 
     .thumbnail
     {
+        position: relative;
+        width: 160px;
         margin: 5px;
         border-radius: 3px;
-        overflow: hidden;
+        user-select: none;
+        cursor: pointer;
+
+        &:hover
+        {
+            .select-border
+            {
+                opacity: 1;
+            }
+        }
+
+        &.selected
+        {
+            .select-border
+            {
+                border-color: @imgur-green;
+                opacity: 1;
+            }
+        }
+
+        .select-border
+        {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            border: 4px solid @iga-salmon;
+            box-sizing: border-box;
+            border-radius: 3px;
+            opacity: 0;
+        }
+
+        img
+        {
+            border-radius: 3px;
+        }
     }
 }
