panel showing into store

--- a/js/previewpanel/previewpanel.less
+++ b/js/previewpanel/previewpanel.less
@@ -16,6 +16,11 @@
     align-content: flex-start;
     background-color: @fade-background;
 
+    &.hidden
+    {
+        display: none;
+    }
+
     .thumbnail
     {
         position: relative;
