preview panel scrolling

--- a/js/previewpanel/previewpanel.less
+++ b/js/previewpanel/previewpanel.less
@@ -6,6 +6,7 @@
 {
     position: absolute;
     display: flex;
+    max-height: 100vh;
     height: 100%;
     top: 0;
     left: 0;
@@ -15,6 +16,8 @@
     flex-wrap: wrap;
     align-content: flex-start;
     background-color: @fade-background;
+    box-sizing: border-box;
+    overflow: auto;
 
     &.hidden
     {
