ability to load arbitrary image links nh thumbnail support

--- a/js/previewpanel/previewpanel.less
+++ b/js/previewpanel/previewpanel.less
@@ -28,10 +28,12 @@
     {
         position: relative;
         width: 160px;
+        height: 160px;
         margin: 5px;
         border-radius: 3px;
         user-select: none;
         cursor: pointer;
+        overflow: hidden;
 
         &:hover
         {
