mouse hide class build updates

--- a/index.less
+++ b/index.less
@@ -26,5 +26,10 @@ body
         {
             display: none;
         }
+
+        &.mouse-hide img
+        {
+            cursor: none;
+        }
     }
 }
